--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 1;
 }
 
-textarea{
+.textarea{
   background: transparent;
   border: none;
   resize: none;
@@ -28,6 +28,7 @@ textarea{
 .time-block{
   text-align: center;
   border-radius: 15px;
+  margin-bottom: 0px;
 }
 
 .row {
@@ -40,21 +41,22 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  min-width: 90px;
 }
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: #000000;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: #000000;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
